--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,12 @@ osx_test_steps:  &osx_test_steps
           key: v4-osx-venv-{{ .Environment.CIRCLE_STAGE }}-{{ .Branch }}-{{ checksum "setup.py" }}
 
       - run:
+          name: dump envars
+          command: |
+            . venv/bin/activate
+            env
+
+      - run:
           name: run tests
           command: |
             . venv/bin/activate
@@ -188,6 +194,6 @@ workflows:
   version: 2
   run_tests:
     jobs:
-      - doctests
+#      - doctests
       - osx37
-      - python37
+#      - python37
